| Summary: | ASTERISK-26592: Latest libedit (3.1) defaults to unicode and makes asterisk CLI read garbage | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2016-11-14 11:20:45.000-0600 | Date Closed: | 2016-11-16 12:18:55.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/BuildSystem |
| Versions: | 13.12.2 14.1.2 GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Any system with libedit >= 3.1 | Attachments: | |
| Description: | libedit now defaults to unicode so the prototype for EL_GETCFN now expects a wchar_t return buffer not char. This causes characters read from the console (local or remote) to be interpreted badly.
{{static int ast_el_read_char(EditLine *editline, char *cp)}} needs to change to {{static int ast_el_read_char(EditLine *editline, wchar_t *cp)}} for libedit 3.1 | ||
| Comments: | By: Friendly Automation (friendly-automation) 2016-11-16 12:18:56.729-0600 Change 4412 merged by Joshua Colp: cli: Fix ast_el_read_char to work with libedit >= 3.1 [https://gerrit.asterisk.org/4412|https://gerrit.asterisk.org/4412] By: Friendly Automation (friendly-automation) 2016-11-16 12:50:44.840-0600 Change 4411 merged by Joshua Colp: cli: Fix ast_el_read_char to work with libedit >= 3.1 [https://gerrit.asterisk.org/4411|https://gerrit.asterisk.org/4411] By: Friendly Automation (friendly-automation) 2016-11-16 14:15:50.724-0600 Change 4410 merged by George Joseph: cli: Fix ast_el_read_char to work with libedit >= 3.1 [https://gerrit.asterisk.org/4410|https://gerrit.asterisk.org/4410] | ||